--- a/css/scss/base/_layout.scss
+++ b/css/scss/base/_layout.scss
@@ -159,16 +159,19 @@ body {
     left:50%;
     transform: translate(-50%, -50%);
     z-index:10;
-    border-radius: 1.6rem 1.6rem 0 0 ;
+    border-radius: 1.6rem;
+    overflow: hidden;
     background:#fff;
     width:90%;
+    .popup-inner{
+        padding:20px;
+    }
     .popup-btn{
-        
         margin-top:1.6rme;
         button{
             display:block;
             width:100%;
-            background:rgba(246,174,155,1);
+            background:#e73c89;
             padding:1.2rem 0;
             color:#fff;
             text-align: center;
@@ -191,7 +194,7 @@ body {
             button{
                 border-radius: 2px;
                 padding:3px 5px;
-                background:rgba(246,174,155,1);
+                background:#b2b0b0;
                 color:#fff;
                 font-size:10px;
             }
