--- a/css/scss/style.css
+++ b/css/scss/style.css
@@ -236,6 +236,7 @@ body {
   flex-shrink: 0;
   justify-content: center;
   color: #000;
+  position: relative;
 }
 .section.section01 {
   background: #fff;
